syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

package native_catalog;

option go_package = "slamy/openCRM/native/catalog;native_catalog_grpc";

message PropertySchema {
    message IntData{
        int64 defaultValue = 1;
    }
    
    message StringData {
        string defaultValue = 1;
    }
    
    message BooleanData {
        bool defaultValue = 1;
    }

    string name = 1;
    string publicName = 2;

    oneof message {
        IntData intProperty = 10;
        StringData stringProperty = 11;
        BooleanData booleanProperty = 12;
    }
}

message Catalog {
    // Namespace where catalog is located
    string namespace = 1;
    // Private short name used only for development. Can not be changed after creation and always stays the same
    string name = 2;
    // Public name. Can be changed at any time and should be used when displaying catalog to the user
    string publicName = 3;
    // Entrty properties schema
    repeated PropertySchema properties = 4;

    // When catalog was creted
    google.protobuf.Timestamp _created = 100;
    // When catalog was updated last time
    google.protobuf.Timestamp _updated = 101;
    // Version of the catalog. After each update, version increases by 1
    int64 _version = 102;
}

message CreateCatalogRequest {
    // Namespace to use
    string namespace = 1;
    // Private short name used only for development. Can not be changed after creation and always stays the same
    string name = 2;
    // Can be changed at any time and should be used when displaying catalog to the user
    string publicName = 3;
    // Entrty properties schema
    repeated PropertySchema properties = 4; 
}
message CreateCatalogResponse {
    Catalog catalog = 1;
}

message DeleteCatalogRequest {
    // Namespace to use
    string namespace = 1;
    // Catalog name
    string name = 2;
}
message DeleteCatalogResponse {
}

message UpdateCatalogRequest {
    // Namespace to use
    string namespace = 1;
    // Catalog name
    string name = 2;
    // Can be changed at any time and should be used when displaying catalog to the user
    string publicName = 3;
    // Entrty properties schema
    repeated PropertySchema properties = 4; 
}
message UpdateCatalogReponse {
    Catalog catalog = 1;
}

message GetCatalogRequest {
    // Namespace to use
    string namespace = 1;
    // Catalog name
    string name = 2;
    // Use cache or not. Greatly speeds up request if catalog is inside cache. Cache invalidates on updates, but still has very low chance to be inconsistent. Inconsistency occures on concurrent write-reads. Cocurrent reads are 100% safe. Incosistent cache will be removed after some period of time.
    bool useCache = 3;
}
message GetCatalogResponse {
    Catalog catalog = 1;
}

message GetCatalogIfChangedRequest {
    // Namespace to use
    string namespace = 1;
    // Catalog name
    string name = 2;
    // Only return catalog if current version is not same
    int64 version = 3;
    // Use cache or not. Greatly speeds up request if catalog is inside cache. Cache invalidates on updates, but still has very low chance to be inconsistent. Inconsistency occures on concurrent write-reads. Cocurrent reads are 100% safe. Incosistent cache will be removed after some period of time.
    bool useCache = 4;
}
message GetCatalogIfChangedResponse {
    oneof message {
        google.protobuf.NullValue null = 1;
        Catalog catalog = 2;
    }
}

message GetAllCatalogsRequest {
    // Namespace to use
    string namespace = 1;
    // Use cache or not. Greately increases speed. Cache invalidates on updates in this namespace, but still has very low chance to be inconsistent. Inconsistency occures on concurrent write-reads. Cocurrent reads are 100% safe. Incosistent cache will be removed after some period of time.
    bool useCache = 4;
}
message GetAllCatalogsResponse {
    Catalog catalog = 1;
}


message CatalogIndex {
    message IndexField {
        enum IndexType {
            HASHED=0;
            ASCENDING=1;
            DESCENDING=2;
        }

        string name = 1;
        IndexType type = 2;
    }

    // Namespace where catalog index is located
    string namespace = 1;
    // Unique name of the index
    string name = 2;
    // Information about field on wich index is applied
    repeated IndexField fields = 3;
    // Is this index unique for this catalog or not. If index unique, there will be no two entries with values that satisfy same position in index. Usefull for making unique values
    bool unique = 4;
}

message ListCatalogIndexesRequest {
    // Namespace to use
    string namespace = 1;
    // Catalog name
    string catalog = 2;
    // Use cache or not. Greately increases speed. Cache invalidates on updates in this catalog, but still has very low chance to be inconsistent. Inconsistency occures on concurrent write-reads. Cocurrent reads are 100% safe. Incosistent cache will be removed after some period of time.
    bool useCache = 4;
}
message ListCatalogIndexesResponse {
    CatalogIndex index = 1;
}

message EnsureCatalogIndexRequest {
    // Namespace to use
    string namespace = 1;
    // Catalog on wich to ensure index
    string catalog = 2;
    // Index information
    CatalogIndex index = 3;
}
message EnsureCatalogIndexResponse {}

message RemoveCatalogIndexRequest {
    // Namespace to use
    string namespace = 1;
    // Catalog where to remove index
    string catalog = 2;
    // Index name to remove
    string index = 3;
}
message RemoveCatalogIndexResponse {}

service CatalogService {
    // Create new catalog
    rpc Create(CreateCatalogRequest) returns (CreateCatalogResponse) {};
    // Deletes catalog and all its entries
    rpc Delete(DeleteCatalogRequest) returns (DeleteCatalogResponse) {};
    // Updates catalog with new information
    rpc Update(UpdateCatalogRequest) returns (UpdateCatalogReponse) {};
    // Returns catalog by its name
    rpc Get(GetCatalogRequest) returns (GetCatalogResponse) {};
    // Returns catalog by its name only if provided version differs from the actual. In other case returns NULL. More optimized version, than Get
    rpc GetIfChanged(GetCatalogIfChangedRequest) returns (GetCatalogIfChangedResponse) {};
    // Streams list of all catalogs
    rpc GetAll(GetAllCatalogsRequest) returns (stream GetAllCatalogsResponse) {};

    // Lists all indexes in the catalog
    rpc ListIndexes(ListCatalogIndexesRequest) returns (stream ListCatalogIndexesResponse) {};
    // Creates or updates index in the catalog
    rpc EnsureIndex(EnsureCatalogIndexRequest) returns (EnsureCatalogIndexResponse) {};
    // Removes index from the catalog
    rpc RemoveIndex(RemoveCatalogIndexRequest) returns (RemoveCatalogIndexResponse) {};

    // Gets catalog statistics

}

message CatalogEntry {
    // Name of the entries catalog
    string catalog = 1;
    // Unique identifier of the entry in catalog
    string uuid = 2;

    // BSON encoded entry data
    bytes data = 3;

    // When entry was creted
    google.protobuf.Timestamp _created = 100;
    // When entry was updated last time
    google.protobuf.Timestamp _updated = 101;
    // Version of the entry. After each update, version increases by 1
    int64 _version = 102;
}

message CreateCatalogEntryRequest {
    // Name of the catalog where create entry
    string catalog = 1;
    // BSON encoded data, that will be added on entry creation
    bytes data = 2;
}
message CreateCatalogEntryResponse {
    CatalogEntry entry = 1;
}

message DeleteCatalogEntryRequest {
    // Name of the catalog where delete entry
    string catalog = 1;
    // Unique identifier of the entry in this catalog
    string entry = 2;
}
message DeleteCatalogEntryResponse {

}

message UpdateCatalogEntryRequest {
    CatalogEntry entry = 1;
}
message UpdateCatalogEntryResponse {

}

message GetCatalogEntryRequest {
    // Name of the catalog where entry is located
    string catalog = 1;
    // Unique identifier of the entry in catalog
    string entry = 2;
}
message GetCatalogEntryResponse {
    CatalogEntry entry = 1;
}

message QueryCatalogEntriesRequest {
    // Name of the catalog to search
    string catalog = 1;

    // MongoDB compatible query in BSON format
    bytes query = 2;

    // How many values to skip before return. If you dont want to skip, use 0.
    google.protobuf.UInt64Value skip = 3;
    // How many values to return. Use 0 to ignore limit.
    google.protobuf.UInt64Value limit = 4;
}
message QueryCatalogEntriesResponse {
    CatalogEntry entry = 1;
}

service CatalogEntryService {
    // Creates new entry in the specified catalog. Entry will receive uuid after successfull creation. Returns newly created entry
    rpc Create(CreateCatalogEntryRequest) returns (CreateCatalogEntryResponse) {};
    // Deletes catalog entry
    rpc Delete(DeleteCatalogEntryRequest) returns (DeleteCatalogEntryResponse) {};
    // Updates catalog entry with new data
    rpc Update(UpdateCatalogEntryRequest) returns (UpdateCatalogEntryResponse) {};
    // Get catalog entry. Uses cache and works much faster than Query operation
    rpc Get(GetCatalogEntryRequest) returns (GetCatalogEntryResponse) {};
    // Run custom query on catalog and get all the entries that satisfy parameters
    rpc Query(QueryCatalogEntriesRequest) returns (QueryCatalogEntriesResponse) {};
}